force-app/main/objects/Territory__c.object
<CustomObject>
    <fields>
        <fullName>Account_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Development_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Development Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commercial_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories6031</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commercial_Leader_Primary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Leader Primary</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TerritoriesHYCI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commercial_Leader_Secondary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Leader Secondary</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TerritoriesHbN3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Engagement_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Engagement Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FBP_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FBP Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FBP_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FBP Team</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories5wOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global_Account_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Account Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Managing Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Team_Region__c</fullName>
        <label>Sales Team Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Team_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Architect</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Territories (Solution Architect)</relationshipLabel>
        <relationshipName>TerritoriesSA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Super_MD_Region__c</fullName>
        <label>Super MD Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Super_MD_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <label>Super Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Super_Region</valueSetName>
        </valueSet>
    </fields>
    <label>Territory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Team_Region__c</columns>
        <columns>Region__c</columns>
        <columns>CRO__c</columns>
        <columns>MD__c</columns>
        <columns>FBP_Director__c</columns>
        <columns>FBP_Team__c</columns>
        <columns>Commercial_Director__c</columns>
        <columns>Commercial_Leader_Primary__c</columns>
        <columns>Commercial_Leader_Secondary__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>South Africa</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Territory</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>